--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -61,7 +61,7 @@
       <Grid Grid.Row="1" RowDefinitions="28,*">
         <!-- Unstaged Toolbar -->
         <Border Grid.Row="0" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}">
-          <Grid ColumnDefinitions="Auto,Auto,Auto,Auto,*,Auto,Auto,Auto,Auto,Auto">
+          <Grid ColumnDefinitions="Auto,Auto,Auto,Auto,*,Auto,Auto,Auto,Auto,Auto,Auto">
             <Path Grid.Column="0" Margin="8,0,0,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG2}" Data="{StaticResource Icons.Changes}"/>
             <TextBlock Grid.Column="1" Text="{DynamicResource Text.WorkingCopy.Unstaged}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold" Margin="4,0,0,0"/>
             <TextBlock Grid.Column="2" FontWeight="Bold" Foreground="{DynamicResource Brush.FG2}" Text="{Binding Unstaged, Converter={x:Static c:ListConverters.ToCount}}"/>
@@ -71,16 +71,25 @@
                     Classes="icon_button"
                     Width="26" Height="14"
                     Padding="0"
+                    IsVisible="{Binding HasUnsolvedConflicts}"
+                    ToolTip.Tip="{DynamicResource Text.WorkingCopy.Conflicts.OpenExternalMergeToolAllConflicts}"
+                    Command="{Binding OpenExternalMergeToolAllConflicts}">
+              <Path Width="14" Height="14" Data="{StaticResource Icons.Conflict}"/>
+            </Button>
+            <Button Grid.Column="6"
+                    Classes="icon_button"
+                    Width="26" Height="14"
+                    Padding="0"
                     ToolTip.Tip="{DynamicResource Text.WorkingCopy.Unstaged.ViewAssumeUnchaged}"
                     Command="{Binding OpenAssumeUnchanged}">
               <Path Width="14" Height="14" Data="{StaticResource Icons.File.Ignore}"/>
             </Button>
-            <ToggleButton Grid.Column="6"
+            <ToggleButton Grid.Column="7"
                           Classes="toggle_untracked"
                           Width="26" Height="14"
                           ToolTip.Tip="{DynamicResource Text.WorkingCopy.IncludeUntracked}"
                           IsChecked="{Binding IncludeUntracked, Mode=TwoWay}"/>
-            <Button Grid.Column="7"
+            <Button Grid.Column="8"
                     Classes="icon_button"
                     Width="26" Height="14"
                     Padding="0"
@@ -93,7 +102,7 @@
               </ToolTip.Tip>
               <Path Width="14" Height="14" Margin="0,6,0,0" Data="{StaticResource Icons.Down}"/>
             </Button>
-            <Button Grid.Column="8"
+            <Button Grid.Column="9"
                     Classes="icon_button"
                     Width="26" Height="14"
                     Padding="0"
@@ -101,7 +110,7 @@
                     Command="{Binding StageAll}">
               <Path Width="14" Height="14" Data="{StaticResource Icons.DoubleDown}"/>
             </Button>
-            <v:ChangeViewModeSwitcher Grid.Column="9"
+            <v:ChangeViewModeSwitcher Grid.Column="10"
                                       Width="26" Height="14"
                                       Margin="0,1,0,0"
                                       ViewMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=UnstagedChangeViewMode, Mode=TwoWay}"/>
