code_review: PR #1174
- keeps all keys in locale files in order
- add தமிழ் (Tamil)

Signed-off-by: leo <longshuang@msn.cn>

--- a/src/App.axaml
+++ b/src/App.axaml
@@ -21,6 +21,7 @@
       <ResourceInclude x:Key="zh_TW" Source="/Resources/Locales/zh_TW.axaml"/>
       <ResourceInclude x:Key="es_ES" Source="/Resources/Locales/es_ES.axaml"/>
       <ResourceInclude x:Key="ja_JP" Source="/Resources/Locales/ja_JP.axaml"/>
+      <ResourceInclude x:Key="ta_IN" Source="/Resources/Locales/ta_IN.axaml"/>
     </ResourceDictionary>
   </Application.Resources>
 
